Closed Bug 456233 Opened 17 years ago Closed 17 years ago

nsMsgHdr needs to ensure various 'in string' parameters to avoid crashes

Categories

(MailNews Core :: Database, defect)

defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0a3

People

(Reporter: asuth, Assigned: asuth)

Details

(Keywords: crash)

Attachments

(1 file)

Not that I passed in undefined values to the various nsIMsgDBHdr property methods and crashed Thunderbird with a null de-ref, but someone less careful could do so...
Attachment #339621 - Flags: superreview?(bienvenu)
Attachment #339621 - Flags: review?(bienvenu)
Attachment #339621 - Flags: superreview?(bienvenu)
Attachment #339621 - Flags: superreview+
Attachment #339621 - Flags: review?(bienvenu)
Attachment #339621 - Flags: review+
Comment on attachment 339621 [details] [diff] [review] make sure NS_ENSURE_ARG_POINTER or equivalent happens for all 'in string' arguments. also, accidentally fix one instance of whitespace. thx, Andrew.
Keywords: checkin-needed
Checked in, changeset id: 393:09db772e3047
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Severity: normal → critical
Keywords: crash
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: