Bug 456233 - "nsMsgHdr needs to ensure various 'in string' parameters to avoid crashes" [r+sr=bienvenu]